音乐播放功能
Signed-off-by: hcll925 <hc_my5ill@163.com>

--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
     "pages": [
-        "pages/welcome/welcome",
         "pages/posts/post",
-        "pages/posts/post-detail/post-detail"
+        "pages/posts/post-detail/post-detail",
+        "pages/welcome/welcome"
+        
     ],
     "window":{
         "navigationBarBackgroundColor": "#405f80"
