--- a/app.json
+++ b/app.json
@@ -1,11 +1,28 @@
 {
     "pages": [
+        "pages/welcome/welcome",
         "pages/posts/post",
         "pages/posts/post-detail/post-detail",
-        "pages/welcome/welcome"
-        
+        "pages/movies/movies"
     ],
     "window":{
         "navigationBarBackgroundColor": "#405f80"
+    },
+    "tabBar": {
+        "borderStyle": "white",
+        "list": [
+            {
+                "pagePath": "pages/posts/post",
+                "text": "阅读",
+                "iconPath": "/images/tab/yuedu.png",
+                "selectedIconPath": "/images/tab/yuedu_hl.png"
+            },
+            {
+                "pagePath": "pages/movies/movies",
+                "text": "电影",
+                "iconPath": "/images/tab/dianying.png",
+                "selectedIconPath": "/images/tab/dianying_hl.png"
+            }
+        ]
     }
 }
