--- a/app.json
+++ b/app.json
@@ -4,7 +4,9 @@
         "pages/welcome/welcome",
         
         "pages/posts/post-detail/post-detail",
-        "pages/movies/movies"
+        "pages/movies/movies",
+        "pages/movies/more-movies/more-movies"
+        
     ],
     "window":{
         "navigationBarBackgroundColor": "#405f80"
