--- a/app.json
+++ b/app.json
@@ -1,12 +1,11 @@
 {
     "pages": [
         "pages/posts/post",
-        "pages/welcome/welcome",
-        
-        "pages/posts/post-detail/post-detail",
         "pages/movies/movies",
-        "pages/movies/more-movies/more-movies"
-        
+        "pages/movies/more-movies/more-movies",
+        "pages/movies/movie-detail/movie-detail",
+        "pages/welcome/welcome",
+        "pages/posts/post-detail/post-detail"
     ],
     "window":{
         "navigationBarBackgroundColor": "#405f80"
@@ -17,14 +16,14 @@
             {
                 "pagePath": "pages/posts/post",
                 "text": "阅读",
-                "iconPath": "/images/tab/yuedu.png",
-                "selectedIconPath": "/images/tab/yuedu_hl.png"
+                "iconPath": "images/tab/yuedu.png",
+                "selectedIconPath": "images/tab/yuedu_hl.png"
             },
             {
                 "pagePath": "pages/movies/movies",
                 "text": "电影",
-                "iconPath": "/images/tab/dianying.png",
-                "selectedIconPath": "/images/tab/dianying_hl.png"
+                "iconPath": "images/tab/dianying.png",
+                "selectedIconPath": "images/tab/dianying_hl.png"
             }
         ]
     }
